Use nixos-unstable in GitHub workflow.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v20
-    - run: |
-        result=$(nix develop --command colmena eval --instantiate -E '{ nodes, ... }: nodes.desktop2k.config.system.build.toplevel')
-        echo "Built: $result"
-        nix develop --command nix path-info -Sh "$result"
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - run: nix develop --command colmena build
+    - run: >
+        nix develop --command nix path-info -Sh "$(nix develop --command colmena eval --instantiate -E '{ nodes, ... }: nodes.desktop2k.config.system.build.toplevel')"
